add the HTML string of the selected item to wxSimpleHtmlListBox events (closes #10159)

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@57643 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775